# random_number_decomposition

./: Manifest.toml  POC0.ipynb  POC1.ipynb  POC2.ipynb  Project.toml  README.MD  Random_numbers.ipynb  Random_numbers_py.ipynb  lin_model_test.ipynb  linear_model_bias_variance.ipynb  mulitlevel_random_effects.ipynb  multilevel_custom_dist.ipynb  multilevel_modeling.ipynb  multilevel_modeling_2nd_try.ipynb  multilevel_modeling_basics.ipynb  multilevel_modeling_multilinear.ipynb  pocj.ipynb  pyproject.toml  test.ipynb  test_jl.ipynb
