[tool.poetry]
name = "probabilisticprogramming"
version = "0.1.0"
description = ""
authors = ["Fabi <your@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
polars = "^1.9.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
dash = "^2.18.1"
plotly = "^5.24.1"
pandas = "^2.2.3"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
